# silero-vad

./: .gitignore
examples/cpp/: CMakeLists.txt  silero-vad-onnx.cpp
